--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ textarea {
   padding: 10px;
   padding-left: 15px;
   resize: none;
+  border-radius: 10px;
 }
 body {
   background: linear-gradient(to right, yellow, #4c8ff9);
@@ -34,6 +35,7 @@ body {
   gap: 20px;
   background: #fff;
   padding: 40px 80px;
+  border-radius: 20px;
 }
 label {
   font-size: 12px;
@@ -91,4 +93,21 @@ button {
   font-size: 16px;
   border-radius: 20px;
   padding: 8px 50px;
+}
+
+/* SOAT.UZ */
+.soat-uz {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 50px;
+}
+.clock {
+  padding: 10px 20px;
+  background: rgb(67, 248, 175);
+  border: 2px solid rgb(0, 255, 81);
+  border-radius: 10px;
+  align-items: center;
+}
+span {
+  color: white;
 }
