--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ label {
   font-size: 12px;
 }
 button {
+  border-radius: 8px
   background: none;
   border: none;
   padding: 12px 30px;
@@ -103,8 +104,8 @@ button {
 }
 .clock {
   padding: 10px 20px;
-  background: rgb(67, 248, 175);
-  border: 2px solid rgb(0, 255, 81);
+  background: rgb(179, 248, 67);
+  border: 2px solid rgb(255, 208, 0);
   border-radius: 10px;
   align-items: center;
 }
